cmake_minimum_required(VERSION 3.16)

project(The-Linux-Programming-Interface C)

add_subdirectory(chapter01)
add_subdirectory(chapter02)
add_subdirectory(chapter03)
add_subdirectory(chapter04)
add_subdirectory(chapter05)
add_subdirectory(chapter06)
add_subdirectory(chapter07)
add_subdirectory(chapter08)
add_subdirectory(chapter09)
add_subdirectory(chapter10)
add_subdirectory(chapter11)
add_subdirectory(chapter12)
add_subdirectory(chapter13)
add_subdirectory(chapter14)
add_subdirectory(chapter15)
add_subdirectory(chapter16)
add_subdirectory(chapter17)
add_subdirectory(chapter18)
add_subdirectory(chapter19)
add_subdirectory(chapter20)
add_subdirectory(chapter21)
add_subdirectory(chapter22)
add_subdirectory(chapter23)
add_subdirectory(chapter24)
add_subdirectory(chapter25)
add_subdirectory(chapter26)
add_subdirectory(chapter27)
add_subdirectory(chapter28)
add_subdirectory(chapter29)
add_subdirectory(chapter30)
add_subdirectory(chapter31)
add_subdirectory(chapter32)
add_subdirectory(chapter33)
add_subdirectory(chapter34)
add_subdirectory(chapter35)
add_subdirectory(chapter36)
add_subdirectory(chapter37)
add_subdirectory(chapter38)
add_subdirectory(chapter39)
add_subdirectory(chapter40)
add_subdirectory(chapter41)
add_subdirectory(chapter42)
add_subdirectory(chapter43)
add_subdirectory(chapter44)
add_subdirectory(chapter45)
add_subdirectory(chapter46)
add_subdirectory(chapter47)
add_subdirectory(chapter48)
add_subdirectory(chapter49)
add_subdirectory(chapter50)
add_subdirectory(chapter51)
add_subdirectory(chapter52)
add_subdirectory(chapter53)
add_subdirectory(chapter54)
add_subdirectory(chapter55)
