cmake_minimum_required(VERSION 3.17)
project(21-nonreentrant C)

include_directories(./include)
add_library(${PROJECT_NAME}_static STATIC src/nonreentrant.c)
add_executable(${PROJECT_NAME} main.c)
if (UNIX AND NOT APPLE)
    target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}_static crypt)
else ()
    target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}_static)
endif ()
